--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
 
-        <canvas id="myCanvas"></canvas>
+        <canvas id="myCanvas" height="640" width="960"></canvas>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
