--- a/levelOne.html
+++ b/levelOne.html
@@ -4,27 +4,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Breakout | Start</title>
+        <title>Breakout</title>
+
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-        <section>
-            <div class="container">
-                <div class="col-12">
-                    <div class="row-12 text-center">
-                            <h1>Breakout Clone</h1>
-                            <p><a href="./levelOne.html">Start Game</a></p>
-                            <p><a href="levels.html">Levels</a></p>
-                            <button class="btn btn-info">How to play</button>
-                    </div>
-                </div>
-            </div>
-        </section>
+
+        <canvas id="myCanvas" height="640" width="960"></canvas>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+        <script type="text/javascript" src="assets/js/app.js"></script>
     </body>
 </html>
