--- a/index.html
+++ b/index.html
@@ -14,10 +14,35 @@
             <div class="container">
                 <div class="col-12">
                     <div class="row-12 text-center">
-                            <h1>Breakout Clone</h1>
-                            <p><a href="./levelOne.html">Start Game</a></p>
-                            <p><a href="levels.html">Levels</a></p>
-                            <button class="btn btn-info">How to play</button>
+                        <h1>Breakout Clone</h1>
+                        <p><a href="./levelOne.html">Start Game</a></p>
+                        <p><a href="levels.html">Levels</a></p>
+
+                        <!--Modal --> 
+                        <!-- Button trigger modal -->
+                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#tutorialModal">
+                            How to play
+                        </button>
+
+                        <!-- Modal -->
+                        <div class="modal fade" id="tutorialModal" tabindex="-1" role="dialog" aria-labelledby="tutorialModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="tutorialModalLabel">Instructions</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        ...
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
