--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <section>
             <div class="container">
                 <div class="col-12">
-                    <div class="row-12 text-center">
+                    <div class="row-12 text-center" id="menu">
                         <h1>Breakout Clone</h1>
                         <p><a href="./levelOne.html">Start Game</a></p>
                         <p><a href="levels.html">Levels</a></p>
