--- a/levelOne.html
+++ b/levelOne.html
@@ -11,8 +11,14 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-
-        <canvas id="myCanvas" height="640" width="960"></canvas>
+        <section>
+            <div id="gameScreen" class="container">
+                <div id="gameWon"></div>
+                <canvas id="myCanvas" height="640" width="960"></canvas>
+            </div>
+            
+        </section>
+        
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
