Added text on the win screen, updated score with JS

--- a/levelOne.html
+++ b/levelOne.html
@@ -13,7 +13,18 @@
     <body>
         <section>
             <div id="gameScreen" class="container">
-                <div id="gameWon"></div>
+                <div id="gameWon">
+                    <div class="row">
+                        <div class="col mt-5 text-center">
+                            <h1>Game Won!</h1>
+                            <p id="winScore">Score: </p>
+                            <div class="mt-5">
+                                <button class="btn btn-success">Play again</button>
+                                <a href="" class="btn btn-info">Main Menu</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <canvas id="myCanvas" height="640" width="960"></canvas>
             </div>
             
