added a lose screen

--- a/levelOne.html
+++ b/levelOne.html
@@ -19,8 +19,20 @@
                             <h1>Game Won!</h1>
                             <p id="winScore">Score: </p>
                             <div class="mt-5">
-                                <button class="btn btn-success">Play again</button>
-                                <a href="" class="btn btn-info">Main Menu</a>
+                                <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
+                                <a href="./index.html" class="btn btn-info">Main Menu</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="gameLost">
+                    <div class="row">
+                        <div class="col mt-5 text-center">
+                            <h1>You lost :(</h1>
+                            <p id="loseScore">Score: </p>
+                            <div class="mt-5">
+                                <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
+                                <a href="./index.html" class="btn btn-info">Main Menu</a>
                             </div>
                         </div>
                     </div>
