added a pause function on esc button press

--- a/levelOne.html
+++ b/levelOne.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Breakout</title>
+        <title>Level One | Breakout</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -21,7 +21,7 @@
                             <p id="winScore">Score: </p>
                             <div class="mt-5">
                                 <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
-                                <a href="./index.html" class="btn btn-info">Main Menu</a>
+                                <a href="index.html" class="btn btn-info">Main Menu</a>
                             </div>
                         </div>
                     </div>
@@ -33,7 +33,7 @@
                             <p id="loseScore">Score: </p>
                             <div class="mt-5">
                                 <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
-                                <a href="./index.html" class="btn btn-info">Main Menu</a>
+                                <a href="index.html" class="btn btn-info">Main Menu</a>
                             </div>
                         </div>
                     </div>
