--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="col-12">
                     <div class="row-12 text-center" id="menu">
                         <h1>Breakout Clone</h1>
-                        <p><a href="./levelOne.html">Start Game</a></p>
+                        <p><a href="levelOne.html">Start Game</a></p>
                         <p><a href="levels.html">Levels</a></p>
 
                         <!--Modal --> 
