changed the project name to dayBreaker and updated all pages to it

--- a/levelOne.html
+++ b/levelOne.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Level One | Breakout</title>
+        <title>Level One | dayBreaker</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -16,7 +16,7 @@
             <div id="gameScreen" class="container">
                 <div id="gameWon">
                     <div class="row">
-                        <div class="col mt-5 text-center">
+                        <div id="winText" class="col mt-5 text-center">
                             <h1>Game Won!</h1>
                             <p id="winScore">Score: </p>
                             <div class="mt-5">
