--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Breakout | Start</title>
+        <title>dayBreaker | Start</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&family=Quicksand&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
             <div class="container">
                 <div class="col-12">
                     <div class="row-12 text-center" id="menu">
-                        <h1>Breakout Clone</h1>
+                        <h1>dayBreaker</h1>
                         <p><a href="levelOne.html">Start Game</a></p>
                         <p><a href="levels.html">Levels</a></p>
 
