changed the lose screen on to match the win screen thematically and added icons on both

--- a/levelOne.html
+++ b/levelOne.html
@@ -17,6 +17,7 @@
                 <div id="gameWon">
                     <div class="row">
                         <div id="winText" class="col mt-5 text-center">
+                            <h1><i class="fas fa-trophy"></i></h1>
                             <h1>Game Won!</h1>
                             <p id="winScore">Score: </p>
                             <div class="mt-5">
@@ -28,8 +29,9 @@
                 </div>
                 <div id="gameLost">
                     <div class="row">
-                        <div class="col mt-5 text-center">
-                            <h1>You lost :(</h1>
+                        <div id="loseText" class="col mt-5 text-center">
+                            <h1><i class="fas fa-heart-broken"></i></h1>
+                            <h1>You lost</h1>
                             <p id="loseScore">Score: </p>
                             <div class="mt-5">
                                 <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
