--- a/levelOne.html
+++ b/levelOne.html
@@ -40,6 +40,20 @@
                         </div>
                     </div>
                 </div>
+
+                <div id="gamePaused">
+                    <div class="row">
+                        <div id="pauseText" class="col mt-5 text-center">
+                            <h1><i class="fas fa-pause"></i></h1>
+                            <h1>Game paused</h1>
+                            <div class="mt-5">
+                                <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
+                                <a href="index.html" class="btn btn-info">Main Menu</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <canvas id="myCanvas" height="640" width="960"></canvas>
             </div>
             
