--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-        <section>
+        <section id="heroImage">
             <div class="container">
                 <div class="col-12">
                     <div class="row-12 text-center" id="menu">
                         <h1>dayBreaker</h1>
-                        <p><a href="levelOne.html">Start Game</a></p>
-                        <p><a href="levels.html">Levels</a></p>
+                        <p><a href="levelOne.html" class="btn btn--grey">Start Game</a></p>
+                        <p><a href="levels.html" class="btn btn--grey">Levels</a></p>
 
                         <!--Modal --> 
                         <!-- Button trigger modal -->
-                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#tutorialModal">
+                        <button type="button" class="btn btn--grey" data-toggle="modal" data-target="#tutorialModal">
                             How to play
                         </button>
 
