--- a/levelTwo.html
+++ b/levelTwo.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Level One | dayBreaker</title>
+        <title>Level Two | dayBreaker</title>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
@@ -54,7 +54,7 @@
                     </div>
                 </div>
 
-                <canvas id="myCanvas" class="backgroundLevelOne" height="640" width="960"></canvas>
+                <canvas id="myCanvas" class="backgroundLevelTwo" height="640" width="960"></canvas>
             </div>
             
         </section>
@@ -64,7 +64,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="assets/js/components/levelOne.js"></script>
         <script type="text/javascript" src="assets/js/app.js"></script>
+        <script type="text/javascript" src="assets/js/levelTwo.js"></script>
     </body>
 </html>
