--- a/levelOne.html
+++ b/levelOne.html
@@ -21,6 +21,7 @@
                             <h1>Game Won!</h1>
                             <p id="winScore">Score: </p>
                             <div class="mt-5">
+                                <a href="levelTwo.html" class="btn btn-info">Next Level</a>
                                 <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
                                 <a href="index.html" class="btn btn-info">Main Menu</a>
                             </div>
