--- a/levelTwo.html
+++ b/levelTwo.html
@@ -21,6 +21,7 @@
                             <h1>Game Won!</h1>
                             <p id="winScore">Score: </p>
                             <div class="mt-5">
+                                <a href="levelThree.html" class="btn btn-info">Next Level</a>
                                 <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
                                 <a href="index.html" class="btn btn-info">Main Menu</a>
                             </div>
@@ -64,7 +65,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
+        <script type="text/javascript" src="assets/js/components/levelTwo.js"></script>
         <script type="text/javascript" src="assets/js/app.js"></script>
-        <script type="text/javascript" src="assets/js/levelTwo.js"></script>
     </body>
 </html>
