Styling on the win screen buttons

--- a/levelTwo.html
+++ b/levelTwo.html
@@ -21,9 +21,9 @@
                             <h1>Game Won!</h1>
                             <p id="winScore">Score: </p>
                             <div class="mt-5">
-                                <a href="levelThree.html" class="btn btn-info">Next Level</a>
-                                <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
-                                <a href="index.html" class="btn btn-info">Main Menu</a>
+                                <a href="levelThree.html" class="btn btn-info w-100">Next Level</a>
+                                <button class="btn btn-success w-100" onclick="window.location.reload();">Play again</button>
+                                <a href="index.html" class="btn btn-info w-100">Main Menu</a>
                             </div>
                         </div>
                     </div>
