moved the canvas to the separate JS component files and made separate IDs for all level canvases

--- a/levelThree.html
+++ b/levelThree.html
@@ -55,7 +55,7 @@
                     </div>
                 </div>
 
-                <canvas id="myCanvas" class="backgroundLevelThree" height="640" width="960"></canvas>
+                <canvas id="levelThreeCanvas" class="backgroundLevelThree" height="640" width="960"></canvas>
             </div>
             
         </section>
