--- a/levelTwo.html
+++ b/levelTwo.html
@@ -35,8 +35,8 @@
                             <h1>You lost</h1>
                             <p id="loseScore">Score: </p>
                             <div class="mt-5">
-                                <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
-                                <a href="index.html" class="btn btn-info">Main Menu</a>
+                                <button class="btn btn-success w-100" onclick="window.location.reload();">Play again</button>
+                                <a href="index.html" class="btn btn-info w-100">Main Menu</a>
                             </div>
                         </div>
                     </div>
@@ -48,14 +48,14 @@
                             <h1><i class="fas fa-pause"></i></h1>
                             <h1>Game paused</h1>
                             <div class="mt-5">
-                                <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
-                                <a href="index.html" class="btn btn-info">Main Menu</a>
+                                <button class="btn btn-success w-100" onclick="window.location.reload();">Play again</button>
+                                <a href="index.html" class="btn btn-info w-100">Main Menu</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <canvas id="myCanvas" class="backgroundLevelTwo" height="640" width="960"></canvas>
+                <canvas id="levelTwoCanvas" class="backgroundLevelTwo" height="640" width="960"></canvas>
             </div>
             
         </section>
