--- a/levelOne.html
+++ b/levelOne.html
@@ -19,7 +19,7 @@
                         <div id="winText" class="col mt-5 text-center">
                             <h1><i class="fas fa-trophy"></i></h1>
                             <h1>Game Won!</h1>
-                            <p id="winScore">Score: </p>
+                            <p class="winScore">Score: </p>
                             <div class="mt-5">
                                 <a href="levelTwo.html" class="btn btn-info w-100">Next Level</a>
                                 <button class="btn btn-success w-100" onclick="window.location.reload();">Play again</button>
@@ -35,8 +35,8 @@
                             <h1>You lost</h1>
                             <p id="loseScore">Score: </p>
                             <div class="mt-5">
-                                <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
-                                <a href="index.html" class="btn btn-info">Main Menu</a>
+                                <button class="btn btn-success w-100" onclick="window.location.reload();">Play again</button>
+                                <a href="index.html" class="btn btn-info w-100">Main Menu</a>
                             </div>
                         </div>
                     </div>
@@ -48,14 +48,14 @@
                             <h1><i class="fas fa-pause"></i></h1>
                             <h1>Game paused</h1>
                             <div class="mt-5">
-                                <button class="btn btn-success" onclick="window.location.reload();">Play again</button>
-                                <a href="index.html" class="btn btn-info">Main Menu</a>
+                                <button class="btn btn-success w-100" onclick="window.location.reload();">Play again</button>
+                                <a href="index.html" class="btn btn-info w-100">Main Menu</a>
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <canvas id="myCanvas" class="backgroundLevelOne" height="640" width="960"></canvas>
+                <canvas id="levelOneCanvas" class="backgroundLevelOne" height="640" width="960"></canvas>
             </div>
             
         </section>
