--- a/levelOne.html
+++ b/levelOne.html
@@ -13,10 +13,10 @@
     </head>
     <body>
         <section>
-            <div id="gameScreen" class="container">
-                <div id="gameWon">
+            <div class="container gameScreen">
+                <div class="gameWon">
                     <div class="row">
-                        <div id="winText" class="col mt-5 text-center">
+                        <div class="col mt-5 text-center winText">
                             <h1><i class="fas fa-trophy"></i></h1>
                             <h1>Game Won!</h1>
                             <p class="winScore">Score: </p>
@@ -28,12 +28,12 @@
                         </div>
                     </div>
                 </div>
-                <div id="gameLost">
+                <div class="gameLost">
                     <div class="row">
-                        <div id="loseText" class="col mt-5 text-center">
+                        <div class="col mt-5 text-center loseText">
                             <h1><i class="fas fa-heart-broken"></i></h1>
                             <h1>You lost</h1>
-                            <p id="loseScore">Score: </p>
+                            <p class="loseScore">Score: </p>
                             <div class="mt-5">
                                 <button class="btn btn-success w-100" onclick="window.location.reload();">Play again</button>
                                 <a href="index.html" class="btn btn-info w-100">Main Menu</a>
@@ -42,9 +42,9 @@
                     </div>
                 </div>
 
-                <div id="gamePaused">
+                <div class="gamePaused">
                     <div class="row">
-                        <div id="pauseText" class="col mt-5 text-center">
+                        <div class="col mt-5 text-center pauseText">
                             <h1><i class="fas fa-pause"></i></h1>
                             <h1>Game paused</h1>
                             <div class="mt-5">
