--- a/levelOne.html
+++ b/levelOne.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <section>
-            <div class="container gameScreen">
+            <div class="gameScreen">
                 <div class="gameWon">
                     <div class="row">
                         <div class="col mt-5 text-center winText">
@@ -55,7 +55,7 @@
                     </div>
                 </div>
 
-                <canvas id="levelOneCanvas" class="backgroundLevelOne" height="540" width="960"></canvas>
+                <canvas id="levelOneCanvas" class="backgroundLevelOne"></canvas>
             </div>
             
         </section>
