--- a/levelOne.html
+++ b/levelOne.html
@@ -56,6 +56,10 @@
                 </div>
 
                 <canvas id="levelOneCanvas" class="backgroundLevelOne"></canvas>
+                <div>
+                    <button class="leftButtonVirtual" onmousedown="isVirtualLeftButtonPressed()" onmouseup="stopMovement()"><i class="fas fa-chevron-circle-left"></i></button>
+                    <button class="rightButtonVirtual" onmousedown="isVirtualRightButtonPressed()" onmouseup="stopMovement()"><i class="fas fa-chevron-circle-right"></i></button>
+                </div>
             </div>
             
         </section>
