changed the event on buttons to touch, note that this will not work on safari and opera

--- a/levelOne.html
+++ b/levelOne.html
@@ -57,8 +57,8 @@
 
                 <canvas id="levelOneCanvas" class="backgroundLevelOne"></canvas>
                 <div>
-                    <button class="leftButtonVirtual" onmousedown="isVirtualLeftButtonPressed()" onmouseup="stopMovement()"><i class="fas fa-chevron-circle-left"></i></button>
-                    <button class="rightButtonVirtual" onmousedown="isVirtualRightButtonPressed()" onmouseup="stopMovement()"><i class="fas fa-chevron-circle-right"></i></button>
+                    <button class="leftButtonVirtual movementButtons" ontouchstart="isVirtualLeftButtonPressed()" ontouchend="stopMovement()"><i class="fas fa-chevron-circle-left"></i></button>
+                    <button class="rightButtonVirtual movementButtons" ontouchstart="isVirtualRightButtonPressed()" ontouchend="stopMovement()"><i class="fas fa-chevron-circle-right"></i></button>
                 </div>
             </div>
             
