--- a/levelOne.html
+++ b/levelOne.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
+    <div class="container">
         <section>
             <div class="gameScreen">
                 <div class="gameWon">
@@ -64,7 +65,7 @@
             
         </section>
         
-
+    </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
