applied the interactivity to level two as well

--- a/levelTwo.html
+++ b/levelTwo.html
@@ -55,7 +55,11 @@
                     </div>
                 </div>
 
-                <canvas id="levelTwoCanvas" class="backgroundLevelTwo" height="540" width="960"></canvas>
+                <canvas id="levelTwoCanvas" class="backgroundLevelTwo"></canvas>
+                <div>
+                    <button class="leftButtonVirtual movementButtons" ontouchstart="isVirtualLeftButtonPressed()" ontouchend="stopMovement()"><i class="fas fa-chevron-circle-left"></i></button>
+                    <button class="rightButtonVirtual movementButtons" ontouchstart="isVirtualRightButtonPressed()" ontouchend="stopMovement()"><i class="fas fa-chevron-circle-right"></i></button>
+                </div>
             </div>
             
         </section>
