--- a/levelOne.html
+++ b/levelOne.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
-    <div class="container">
+    <div class="wrapper">
         <section>
             <div class="gameScreen">
                 <div class="gameWon">
