added content in the tutorial modal

--- a/index.html
+++ b/index.html
@@ -36,10 +36,21 @@
                                         </button>
                                     </div>
                                     <div class="modal-body">
-                                        ...
+                                        <h2>Help us clear up the sky!</h2>
+                                        <p>All the cities in daybreaker have been covered in clouds for a long time, help them break up the clouds and get them some sunlight!</p>
+                                        <h3>How to play</h3>
+                                        <p><strong>On desktop</strong> simply move the paddle left and right by pressing the corresponding arrow keys on your keyboard.</p>
+                                        <p><strong>On phones</strong> you press the arrow buttons on the screen below the game to move. They look like the arrows below.</p>
+
+                                        <hr class="mb-5">
+                                        <div id="tutorialPaddle"></div>
+                                        <div id="tutorialArrows">
+                                            <i class="fas fa-chevron-circle-left" id="leftTutorialArrow"></i>
+                                            <i class="fas fa-chevron-circle-right" id="rightTutorialArrow"></i>
+                                        </div>
                                     </div>
                                     <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                        <button type="button" class="btn btn-secondary w-100" data-dismiss="modal">Close</button>
                                     </div>
                                 </div>
                             </div>
