added the responsive code to level three

--- a/levelThree.html
+++ b/levelThree.html
@@ -12,8 +12,9 @@
         <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
+    <div class="wrapper">
         <section>
-            <div class="container gameScreen">
+            <div class="gameScreen">
                 <div class="gameWon">
                     <div class="row">
                         <div class="col mt-5 text-center winText">
@@ -55,11 +56,12 @@
                     </div>
                 </div>
 
-                <canvas id="levelThreeCanvas" class="backgroundLevelThree" height="540" width="960"></canvas>
+                <canvas id="levelThreeCanvas" class="backgroundLevelThree"></canvas>
             </div>
             
         </section>
         
+    </div>
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
