--- a/levelThree.html
+++ b/levelThree.html
@@ -57,6 +57,10 @@
                 </div>
 
                 <canvas id="levelThreeCanvas" class="backgroundLevelThree"></canvas>
+                <div>
+                    <button class="leftButtonVirtual movementButtons" ontouchstart="isVirtualLeftButtonPressed()" ontouchend="stopMovement()"><i class="fas fa-chevron-circle-left"></i></button>
+                    <button class="rightButtonVirtual movementButtons" ontouchstart="isVirtualRightButtonPressed()" ontouchend="stopMovement()"><i class="fas fa-chevron-circle-right"></i></button>
+                </div>
             </div>
             
         </section>
