--- a/levelThree.html
+++ b/levelThree.html
@@ -71,7 +71,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js"></script>
 
-        <script type="text/javascript" src="assets/js/components/levelThree.js"></script>
-        <script type="text/javascript" src="assets/js/app.js"></script>
+        <script src="assets/js/components/levelThree.js"></script>
+        <script src="assets/js/app.js"></script>
     </body>
 </html>
