changed the touch screen handlers to be in the js file instead of the html files

--- a/levelTwo.html
+++ b/levelTwo.html
@@ -58,8 +58,8 @@
 
                 <canvas id="levelTwoCanvas" class="backgroundLevelTwo"></canvas>
                 <div>
-                    <button class="leftButtonVirtual movementButtons" ontouchstart="isVirtualLeftButtonPressed()" ontouchend="stopMovement()"><i class="fas fa-chevron-circle-left"></i></button>
-                    <button class="rightButtonVirtual movementButtons" ontouchstart="isVirtualRightButtonPressed()" ontouchend="stopMovement()"><i class="fas fa-chevron-circle-right"></i></button>
+                    <button class="leftButtonVirtual movementButtons"><i class="fas fa-chevron-circle-left"></i></button>
+                    <button class="rightButtonVirtual movementButtons"><i class="fas fa-chevron-circle-right"></i></button>
                 </div>
             </div>
             
