--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="col-12">
                     <div class="row-12 text-center" id="menu">
                         <h1>dayBreaker</h1>
-                        <p><a href="levelOne.html" class="btn btn--grey">Start Game</a></p>
+                        <p><a href="level-one.html" class="btn btn--grey">Start Game</a></p>
 
                         <!--Modal --> 
                         <!-- Button trigger modal -->
