--- a/level-two.html
+++ b/level-two.html
@@ -17,7 +17,7 @@
             <div class="gameScreen">
                 <div class="gameWon">
                     <div class="row">
-                        <div class="col mt-5 text-center winText">
+                        <div class="col text-center winText">
                             <h1><i class="fas fa-trophy"></i></h1>
                             <h1>Game Won!</h1>
                             <p class="winScore">Score: </p>
@@ -31,7 +31,7 @@
                 </div>
                 <div class="gameLost">
                     <div class="row">
-                        <div class="col mt-5 text-center loseText">
+                        <div class="col text-center loseText">
                             <h1><i class="fas fa-heart-broken"></i></h1>
                             <h1>You lost</h1>
                             <p class="loseScore">Score: </p>
@@ -45,7 +45,7 @@
 
                 <div class="gamePaused">
                     <div class="row">
-                        <div class="col mt-5 text-center pauseText">
+                        <div class="col text-center pauseText">
                             <h1><i class="fas fa-pause"></i></h1>
                             <h1>Game paused</h1>
                             <div class="mt-5">
