added the pause function in the how to play modal

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                                         <h3>How to play</h3>
                                         <p><strong>On desktop</strong> simply move the paddle left and right by pressing the corresponding arrow keys on your keyboard.</p>
                                         <p><strong>On phones</strong> you press the arrow buttons on the screen below the game to move. They look like the arrows below.</p>
+                                        <p>If you ever want to <strong>pause the game</strong>, press the <strong>esc</strong> button on your keyboard</p>
 
                                         <hr class="mb-5">
                                         <div id="tutorialPaddle"></div>
